Fix JDK 21 warning caused by Mockito