@@ -167,7 +167,7 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
-                    <jvmArguments>${argLine}</jvmArguments>
+                    <jvmArguments>@{argLine}</jvmArguments>
                 </configuration>
                 <executions>
                     <execution>
@@ -185,6 +185,12 @@
                 <configuration>
                     <enableProcessChecker>all</enableProcessChecker>
                     <shutdown>exit</shutdown>
+                    <!-- Prevent JDK 21 warnings related to Mockito during tests. -->
+                    <!-- See:  https://github.com/mockito/mockito/issues/3037 -->
+                    <argLine>
+                        @{argLine}
+                        -XX:+EnableDynamicAgentLoading
+                    </argLine>
                 </configuration>
                 <dependencies>
                     <dependency>
